# web-corpus-craft

./: .gitignore  bloom_service.py  data  deal_data.ipynb  fasttext_train.py  main.py  md  models  multi_fasttext.py  multi_fasttext_flow.py  process_data.py  prompt  prompt-current  prompt-industry  prompt-simple  prompt-正常  prompt2  pyproject.toml  result  split_no_newlines_segments.txt  test.py  torch_version.py  train_model.md  utils.py
datatrove/: 1_local_language_and_filter.py  2_local_filter_quality.py  3-local_dedupe_minhash.py  Dockerfile  findweb.py  run_flow
fasttext/: infer.py  mult_infer.py  parallel_infer.py  train.py
utils/: data_util.py  dedup_csv.py  dedup_dataset.py  dedup_large_csv.py  deduplicates.py  deduplicator.py  domain_statistic.py  extract_dclm_domain.py  fasttext_sample.py  filter_by_len.py  filter_by_prob.py  filter_by_score.py  filter_by_url.py  filter_dclm_by_url.py  general_dataset.py  generate_dataset.py  llm_judge.py  merge_csv.py  merge_dataset.py  merge_large_csv.py  merge_train_data.py  pd_util.py  sample.py  split_csv.py  split_long_text.py  url_count.py
