[project]
name = "web-corpus-craft"
version = "0.1.0"
description = "web corpus deal flow"
readme = "README.md"
requires-python = ">=3.11"
link-mode = "copy"
dependencies = [
    "datatrove[cli,io,processing]>=0.3.0",
    "fastapi>=0.116.2",
    "fasttext-numpy2>=0.10.4",
    "loguru>=0.7.3",
    "numpy>2",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "python-dotenv>=1.1.1",
    "rbloom>=1.5.4",
    "requests>=2.32.5",
    "scikit-learn>=1.7.1",
    "spacy[ja]>=3.8.7",
    "tldextract>=5.3.0",
    "tqdm>=4.67.1",
    "unidecode>=1.4.0",
    "uvicorn>=0.35.0",
    "zai-sdk>=0.0.3.3",
    "zstandard>=0.24.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true
